--- a/Jenkins learn/Jenkinsfile
+++ b/Jenkins learn/Jenkinsfile
@@ -64,18 +64,22 @@ pipeline {
                 // }
             }
         }
-        // post{failure{
-        //     echo "Build failed"
-        //     mail to: 'xyz@mail.com',
-        //     subject: "Build failed: ${env.JOB_NAME} #${env.BUILD_NUMBER}",
-        //     body: "The build failed"
+    }
+    
+    // post{
+        // failure{
+            // echo "Build failed"
+            // mail to: 'xyz@mail.com',
+            //  subject: "Build failed: ${env.JOB_NAME} #${env.BUILD_NUMBER}",
+            //  body: "The build failed"
         // }
 
         // success{
         //     echo "Build success"
         //     archiveArtifacts artifacts: 'myapp/*.txt', onlyIfSuccessful: true
         // }
-    }
+    // }
+
 }
 
 
